CARMENCAMPOSORTIZANGELES/PRIMER EJERCICIO JS.txt
PRIMER APLICACION DESDE TERMINAL CON JS

To run a command as administrator (user "root"), use "sudo <command>".
See "man sudo_root" for details.

AGCAMPOSO@JUUJ-CONSULTORES:~$ ls -l
total 0
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 15 11:22 Appending
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO  131 May 11 12:36 aprendiendo.html
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 15 11:22 Cloning
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 15 11:22 Close
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 15 11:22 Compressing
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 15 11:22 Downloading
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO    0 May 11 12:13 index.html
drwxrwxrwx 0 AGCAMPOSO AGCAMPOSO 4096 May 11 11:03 PRUEBA
drwxrwxrwx 0 AGCAMPOSO AGCAMPOSO 4096 May 15 12:40 TRAININGJS
AGCAMPOSO@JUUJ-CONSULTORES:~$ cd TRAININGJS
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ DIR
DIR: command not found
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ dir
node_modules  package-lock.json
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ ls -l
total 8
drwxrwxrwx 0 AGCAMPOSO AGCAMPOSO 4096 May 15 12:40 node_modules
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO 7773 May 15 12:40 package-lock.json
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ vim prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ node prompt-test.js
/home/AGCAMPOSO/TRAININGJS/prompt-test.js:1
(function (exports, require, module, __filename, __dirname) { var prompt = require('prompt);
                                                                                   ^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at new Script (vm.js:74:7)
    at createScript (vm.js:246:10)
    at Object.runInThisContext (vm.js:298:10)
    at Module._compile (internal/modules/cjs/loader.js:646:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:689:10)
    at Module.load (internal/modules/cjs/loader.js:589:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:528:12)
    at Function.Module._load (internal/modules/cjs/loader.js:520:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:719:10)
    at startup (internal/bootstrap/node.js:228:19)
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ ls -l
total 8
drwxrwxrwx 0 AGCAMPOSO AGCAMPOSO 4096 May 15 12:40 node_modules
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO 7773 May 15 12:40 package-lock.json
-rw-rw-rw- 1 AGCAMPOSO AGCAMPOSO  239 May 15 13:23 prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ vim prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ node prompt-test.js
/home/AGCAMPOSO/TRAININGJS/prompt-test.js:6
        console.log('username': ' + result.username);
                    ^^^^^^^^^^

SyntaxError: missing ) after argument list
    at new Script (vm.js:74:7)
    at createScript (vm.js:246:10)
    at Object.runInThisContext (vm.js:298:10)
    at Module._compile (internal/modules/cjs/loader.js:646:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:689:10)
    at Module.load (internal/modules/cjs/loader.js:589:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:528:12)
    at Function.Module._load (internal/modules/cjs/loader.js:520:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:719:10)
    at startup (internal/bootstrap/node.js:228:19)
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ vim prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ node prompt-test.js
/home/AGCAMPOSO/TRAININGJS/prompt-test.js:2
promt.star();
^

ReferenceError: promt is not defined
    at Object.<anonymous> (/home/AGCAMPOSO/TRAININGJS/prompt-test.js:2:1)
    at Module._compile (internal/modules/cjs/loader.js:678:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:689:10)
    at Module.load (internal/modules/cjs/loader.js:589:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:528:12)
    at Function.Module._load (internal/modules/cjs/loader.js:520:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:719:10)
    at startup (internal/bootstrap/node.js:228:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:576:3)
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ vim prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ node prompt-test.js
/home/AGCAMPOSO/TRAININGJS/prompt-test.js:2
promt.start();
^

ReferenceError: promt is not defined
    at Object.<anonymous> (/home/AGCAMPOSO/TRAININGJS/prompt-test.js:2:1)
    at Module._compile (internal/modules/cjs/loader.js:678:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:689:10)
    at Module.load (internal/modules/cjs/loader.js:589:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:528:12)
    at Function.Module._load (internal/modules/cjs/loader.js:520:3)
    at Function.Module.runMain (internal/modules/cjs/loader.js:719:10)
    at startup (internal/bootstrap/node.js:228:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:576:3)
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ vim prompt-test.js
AGCAMPOSO@JUUJ-CONSULTORES:~/TRAININGJS$ node prompt-test.js
prompt: username: